<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jmeos</groupId>
    <artifactId>jmeos</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>JMEOS is a Java library allowing MobilityDB users
        to perform MEOS native operations on MobilityDB data types.
    </description>

    <modules>
        <module>src/main/java/builder</module>
    </modules>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- For the version of the dependencies, see https://mvnrepository.com/ -->
        <dependency>
            <groupId>com.github.jnr</groupId>
            <artifactId>jnr-ffi</artifactId>
            <version>2.2.14</version>
        </dependency>

        <dependency>
            <groupId>net.postgis</groupId>
            <artifactId>postgis-jdbc</artifactId>
            <version>2021.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- For the version of the plugins, see https://mvnrepository.com/ -->
            <plugin>
                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/ -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>

            <plugin>
                <!-- Copy the libmeos.so to target/classes/jmeos/lib -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-native-resources</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/classes/jmeos/lib</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/lib</directory>
                                    <includes>
                                        <include>libmeos.so</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <!-- https://maven.apache.org/plugins/maven-shade-plugin/ -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <shadedClassifierName>shaded</shadedClassifierName>
                    <createDependencyReducedPom>true</createDependencyReducedPom>
                    <dependencyReducedPomLocation>${project.basedir}/dependency-reduced-pom.xml
                    </dependencyReducedPomLocation>
                    <relocations>
                        <!-- Relocate classes to jmeos package -->
                        <relocation>
                            <pattern>functions</pattern>
                            <shadedPattern>jmeos.functions</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>types</pattern>
                            <shadedPattern>jmeos.types</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>utils</pattern>
                            <shadedPattern>jmeos.utils</shadedPattern>
                        </relocation>
                    </relocations>
                    <artifactSet>
                        <includes>
                            <!-- Include only jmeos artifacts -->
                            <include>org.jmeos:*</include>
                        </includes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>org.jmeos:jmeos</artifact>
                            <!-- Exclude specific directory -->
                            <excludes>
                                <exclude>tutorials/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <!-- Inclure le fichier libmeos.so dans le dossier lib du jar -->
                        <transformer
                                implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                            <resource>src/lib/libmeos.so</resource>
                            <file>lib/libmeos.so</file>
                        </transformer>
                    </transformers>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>JMEOS</finalName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <show>private</show>
                    <nohelp>true</nohelp>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadoc</id>
                        <phase>package</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
                    <show>public</show>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>